# rby1_robot_implementation

./: LICENSE  NOTICE  README.md
gazebo_rby/: CMakeLists.txt  package.xml
gazebo_rby/config/: controllers.yaml  diff_drive.yaml  rby_controller_manager.yaml  rby_position_publisher.yaml  ros_gz_bridge.yaml
gazebo_rby/launch/: gazebo.launch.py  rby_trayectory_publish.launch.py
gazebo_rby/urdf/robots/: rby_gazebo.urdf.xacro  temp.urdf.xacro
gazebo_rby/urdf/sensors/: camera_color_gazebo.urdf.xacro  imu_gazebo.urdf.xacro
gazebo_rby/worlds/: empty.sdf  maze.sdf
urdf_rby/: CMakeLists.txt  package.xml
urdf_rby/launch/: config.rviz  display.launch.py
urdf_rby/meshes/: README_ATTRIBUTION.md  untitled.dae
urdf_rby/urdf/robots/: model.urdf  rby.urdf.xacro  rby_gazebo.urdf.xacro  rby_standalone.urdf.xacro  temp.urdf.xacro
urdf_rby/urdf/sensors/: camera_color.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  lidar_gazebo.urdf.xacro
